docs: correct the spool-namespace reload rung; add spool-repo testing and retained-root guidance
The pickup ladder claimed a bare (require ... :reload) reaches any loaded
namespace — false for spool-classloader-supplied namespaces, as the kanban
extraction proved; the ladder now splits base-classpath from spool
namespaces and gives the working recipe. writing-shared-spools gains the
standalone spool-repo :test alias pattern (sibling skein checkout plus the
workflow root) and a caution that a live weaver retains every synced root
for the JVM lifetime. CONTRIBUTING's board-contract link now points at the
external kanban.spool doc instead of the moved-notice stub.